Update contact information in index.html

--- a/index.html
+++ b/index.html
@@ -661,7 +661,7 @@
                         </div>
                         <div>
                             <p class="font-semibold">الهاتف</p>
-                            <p class="text-gray-600">+966 123 456 789</p>
+                            <p class="text-gray-600">07800101049</p>
                         </div>
                     </div>
                     <div class="flex items-center space-x-3 space-x-reverse">
@@ -670,7 +670,7 @@
                         </div>
                         <div>
                             <p class="font-semibold">الواتساب</p>
-                            <p class="text-gray-600">+966 123 456 789</p>
+                            <p class="text-gray-600">07800101049</p>
                         </div>
                     </div>
                     <div class="flex items-center space-x-3 space-x-reverse">
@@ -679,7 +679,7 @@
                         </div>
                         <div>
                             <p class="font-semibold">البريد الإلكتروني</p>
-                            <p class="text-gray-600">info@aswaq-alqotob.com</p>
+                            <p class="text-gray-600">aloosh1011@outlook.com</p>
                         </div>
                     </div>
                     <div class="flex items-center space-x-3 space-x-reverse">
@@ -688,7 +688,7 @@
                         </div>
                         <div>
                             <p class="font-semibold">العنوان</p>
-                            <p class="text-gray-600">المملكة العربية السعودية</p>
+                            <p class="text-gray-600">بغداد-ناحية الرشيد</p>
                         </div>
                     </div>
                 </div>
