--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>أسواق القطب - متجر إلكتروني متكامل</title>
+    <title>أسواق القطب</title>
     
     <!-- PWA Meta Tags -->
     <meta name="theme-color" content="#8b5cf6">
