--- a/index.html
+++ b/index.html
@@ -833,7 +833,7 @@
                         </div>
                         <div class="form-group">
                             <label class="form-label">رقم الهاتف</label>
-                            <input type="tel" id="register-phone" class="form-input" placeholder="05XXXXXXXX" required>
+                            <input type="tel" id="register-phone" class="form-input" placeholder="07XXXXXXXXX" required>
                         </div>
                         <div class="form-group">
                             <label class="form-label">كلمة المرور</label>
@@ -1799,9 +1799,9 @@
             }
             
             // التحقق من رقم الهاتف
-            const phoneRegex = /^05\d{8}$/;
+            const phoneRegex = /^07\d{11}$/;
             if (!phoneRegex.test(phone)) {
-                showToast('يرجى إدخال رقم هاتف صحيح (يبدأ بـ 05 ويحتوي على 10 أرقام)');
+                showToast('يرجى إدخال رقم هاتف صحيح (يبدأ بـ 07 ويحتوي على 11 أرقام)');
                 return false;
             }
             
