Update email address from Outlook to Gmail

--- a/index.html
+++ b/index.html
@@ -1023,7 +1023,7 @@
                         </div>
                         <div>
                             <p class="font-semibold">البريد الإلكتروني</p>
-                            <p class="text-gray-600">aloosh1011@outlook.com</p>
+                            <p class="text-gray-600">kingash2000@gmail.com</p>
                         </div>
                     </div>
                     <div class="flex items-center space-x-3 space-x-reverse">
@@ -1158,7 +1158,7 @@
         const EMAILJS_PUBLIC_KEY = 'Bbk-efBZIZwZw-2WI';
         const EMAILJS_SERVICE_ID = 'service_s3tkjzh';
         const EMAILJS_TEMPLATE_ID = 'template_oe0t4ki';
-        const STORE_EMAIL = 'aloosh1011@outlook.com';
+        const STORE_EMAIL = 'kingash2000@gmail.com';
 
         // بيانات التطبيق
         const categories = [
