Update description and delivery service text

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="default">
     <meta name="apple-mobile-web-app-title" content="أسواق القطب">
-    <meta name="description" content="متجر إلكتروني متكامل مع توصيل سريع">
+    <meta name="description" content="متجر إلكتروني متكامل">
     <meta name="keywords" content="متجر, تسوق, توصيل, بقالة">
     
     <!-- PWA Manifest -->
@@ -591,7 +591,7 @@
                             <span class="block text-amber-300 mt-2">عِش براحة</span>
                         </h1>
                         <p class="text-lg md:text-xl mb-6 opacity-90 leading-relaxed arabic-text hero-subtitle">
-                            اكتشف أفضل المنتجات والعروض مع توصيل سريع  
+                            اكتشف أفضل المنتجات والعروض  
                             <span class="block mt-2">لمنزلك في أسرع وقت</span>
                         </p>
                         <div class="flex flex-col gap-3 w-full max-w-xs mx-auto">
@@ -614,7 +614,7 @@
                                         <i data-lucide="truck" class="w-5 h-5 text-purple-600"></i>
                                     </div>
                                     <div>
-                                        <p class="font-bold text-gray-800 text-sm">توصيل سريع</p>
+                                        <p class="font-bold text-gray-800 text-sm">خدمة التوصيل غير متوفرة الان</p>
                                     </div>
                                 </div>
                             </div>
@@ -1043,7 +1043,7 @@
 
         // === بيانات التطبيق ===
         const categories = [
-            { id: 1, name: "بقوليات", icon: "carrot", color: "10b981", gradient: "teal-gradient", imageUrl: "https://images.unsplash.com/photo-1627916515865-c3f9152a466a?q=80&w=600&auto=format&fit=crop" },
+            { id: 1, عدس نورس: "بقوليات", icon: "carrot", color: "10b981", gradient: "teal-gradient", imageUrl: "https://images.unsplash.com/photo-1627916515865-c3f9152a466a?q=80&w=600&auto=format&fit=crop" },
             { id: 2, name: "معلبات", icon: "package", color: "f59e0b", gradient: "orange-gradient", imageUrl: "https://images.unsplash.com/photo-1579613832104-e0b62e49c716?q=80&w=600&auto=format&fit=crop" },
             { id: 3, name: "الحليب ومشتقاته", icon: "milk", color: "dc2626", gradient: "pink-gradient", imageUrl: "https://images.unsplash.com/photo-1588836592271-be84c478a05c?q=80&w=600&auto=format&fit=crop" },
             { id: 4, name: "زيوت + سمن", icon: "flask-conical", color: "06b6d4", gradient: "blue-gradient", imageUrl: "https://images.unsplash.com/photo-1615719984922-38e55e0037a3?q=80&w=600&auto=format&fit=crop" },
@@ -1136,7 +1136,7 @@
             const manifest = {
                 "name": "أسواق القطب",
                 "short_name": "أسواق القطب",
-                "description": "متجر إلكتروني متكامل مع توصيل سريع",
+                "description": "متجر إلكتروني متكامل",
                 "start_url": "./",
                 "display": "standalone",
                 "background_color": "#ffffff",
