Update keywords meta tag in index.html

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <meta name="apple-mobile-web-app-status-bar-style" content="default">
     <meta name="apple-mobile-web-app-title" content="أسواق القطب">
     <meta name="description" content="متجر إلكتروني متكامل">
-    <meta name="keywords" content="متجر, تسوق, توصيل, بقالة">
+    <meta name="keywords" content="متجر, تسوق">
     
     <!-- PWA Manifest -->
     <link rel="manifest" id="app-manifest">
