Update fixed prices and product names in index.html

--- a/index.html
+++ b/index.html
@@ -1039,9 +1039,9 @@
         const FIXED_PRICES = {
             // فئة البقوليات (id: 1)
             1: [
-                16000, 12000, 17.50, 18.00, 19.50, // المنتجات 1-5
-                20.00, 21.50, 22.00, 23.50, 24.00, // المنتجات 6-10
-                25.50, 26.00, 27.50, 28.00, 29.50, // المنتجات 11-15
+                1000, 750, 1250, 3000, 2000, // المنتجات 1-5
+                2000, 1500, 4000, 3000, 1000, // المنتجات 6-10
+                1000, 26.00, 27.50, 28.00, 29.50, // المنتجات 11-15
                 30.00, 31.50, 32.00, 33.50, 34.00, // المنتجات 16-20
                 35.50, 36.00, 37.50, 38.00, 39.50, // المنتجات 21-25
                 40.00, 41.50, 42.00, 43.50, 44.00  // المنتجات 26-30
@@ -1107,9 +1107,9 @@
         // أسماء المنتجات الحقيقية لكل فئة
         const realProductNames = {
             1: [ // بقوليات
-                "عدس جوكر", "عدس نورس", "فول مدمس", "حمص حب", "فاصولياء بيضاء",
-                "فاصولياء حمراء", "لوبيا حمراء", "بازلاء مجففة", "ترمس", "ذرة مجففة",
-                "فول سوداني", "لوبيا سوداء", "حبوب الحلبة", "قمح مجروش", "شعير",
+                "سميد متين", "ذرة معمورة", "ذرة زير", "حمص مكسيكي", "ليمون دوزي",
+                "فاصوليا مصري", "جريش كبة", "نومي بصرة", "باقلاء", "جريش زير",
+                "برغل زير", "لوبيا سوداء", "حبوب الحلبة", "قمح مجروش", "شعير",
                 "دخن", "فول صويا", "فول أخضر", "حمص شامي", "عدس بني",
                 "فاصولياء سوداء", "فاصولياء بينتو", "بازلاء خضراء", "عدس مجروش",
                 "فول بلدي", "حمص محمص", "فول نابت", "فاصولياء ليما", "حبوب الدجرا",
