Fix image URL for المستهلكات category

--- a/index.html
+++ b/index.html
@@ -1130,7 +1130,7 @@
             { id: 16, name: "العناية الشخصية", icon: "user", color: "f97316", gradient: "orange-gradient", 
               imageUrl: "https://drive.google.com/file/d/1lVEspCi7QAswoBnKPJepRcp3RS7B2795/view?usp=drivesdk" },
             { id: 17, name: "المستهلكات", icon: "shopping-bag", color: "ca8a04", gradient: "pink-gradient", 
-              imageUrl: "https://drive.google.com/file/d/1qSN2l7WBWu-um69-Q17TR4EO_ES9gJwt/view?usp=drivesdk" },
+              imageUrl: "https://drive.google.com/file/d/1qSN2l7WBWu-um69-Q17TR4EO_ES9gJwt/view" },
             { id: 18, name: "البيض", icon: "egg", color: "fbbf24", gradient: "blue-gradient", 
               imageUrl: "https://images.unsplash.com/photo-1587842795431-705b06d86016?q=80&w=600&auto=format&fit=crop" },
             { id: 19, name: "الشاي والقهوة", icon: "coffee", color: "57534e", gradient: "purple-gradient", 
