--- a/index.html
+++ b/index.html
@@ -607,7 +607,8 @@
                     </div>
                     <div class="mt-8 w-full max-w-sm">
                         <div class="relative">
-                            <img src="https://images.unsplash.com/photo-1563013544-824ae1b704d3?q=80&w=600&auto=format&fit=crop" 
+                            <!-- هنا تم تغيير رابط الصورة إلى الرابط الذي وفرته -->
+                            <img src="https://drive.google.com/thumbnail?id=1zhT-yJZTwJSiQ9QnGvhvPTHn7DNG7Whv&sz=w1000" 
                                  alt="سوبر ماركت حديث" 
                                  class="rounded-2xl shadow-2xl w-full" loading="lazy">
                             <div class="absolute -bottom-4 -right-4 bg-white rounded-2xl p-3 shadow-2xl">
